fix(stack): fix alignment and growing for inline stack

--- a/src/stack/stack.module.css
+++ b/src/stack/stack.module.css
@@ -18,10 +18,6 @@
   &[data-stack-inline='true'] {
     display: inline-flex;
     flex-grow: 0;
-
-    & > * {
-      flex-grow: 0;
-    }
   }
 
   &[data-stack-wrap='true'] {
